syntax = "proto3";
package order;

import "google/protobuf/timestamp.proto";

option go_package = "./order";

message GetMyOrderReq {
  string id = 1;
}

message PageInfo {
  int64 page = 1;
  int64 size = 2;
  int64 num_of_pages = 3;
  int64 all_of_entities = 4;
}

message GetMyOrderRes {
  PageInfo page_info = 1;
  repeated Order entities = 2;
}

message Order {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  int64 status = 4;
  repeated OrderItem items = 5;
  double total = 6;
}

message OrderItem {
  int64 quantity = 1;
  string product_id = 2;
  Product product = 3;
}

message Product {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  double price = 4;
  string name = 5;
  int64 stock = 6;
}

service OrderService {
  rpc GetMyOrder (GetMyOrderReq) returns (GetMyOrderRes) {};  
}